fix: scrollbar width 0

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,10 @@
 * {
   font-family: 'Roboto', sans-serif;
   box-sizing: border-box;
+
+  ::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 body {
